# dotfiles

./: .gitignore  .run_hyprland  .zsh_zplug  .zshrc  README.md  install_stow.md  justfile
.config/hypr/UserConfigs/: Startup_Apps.conf  UserSettings.conf
.githooks/: pre-push
.justdir/: claude.just  codex.just  global.just  health.just  mise.just  stow.just  sync.just
claude/: CLAUDE.md
claude/.claude/: gsd-zettel-sync.sh  pipeline-stamp.sh  review-pr-core.md  settings.json  statusline.sh
claude/.claude/commands/: auto-mode.md  check-pr.md  coaching.md  gsd-zettel-sync.md  just-test.md  next.md  (+11 more)
codex/.codex/: README.md  auto.config.toml  config.toml  hooks.json  pipeline-stamp.sh  review-pr-core.md  safe.config.toml
docs/: claude-migration.md
hammerspoon/.hammerspoon/: bookmarks.json  clipboard.lua  hyper-keys.json  init.lua
server/: justfile
telegram-notes-bot/: .gitignore  README.md  justfile  pyproject.toml
telegram-notes-bot/notesbot/: __main__.py  config.py  handlers.py  manual_recap.py  recap.py  scheduler.py  storage.py  weeks.py
telegram-notes-bot/tests/: test_config.py  test_recap.py  test_storage.py  test_weeks.py
temp/: example.lua
tmux/: .tmux-status.sh  .tmux.conf  .tmux.conf.local  mode-theme-picker.html
tmux/patches/: opensessions-custom.patch  opensessions-window-name.patch
tmux/scripts/: _common.sh  claude-dashboard.sh  git-compare.sh  just-menu.sh  keys-help.sh  session-switch.sh  theme-picker.sh  worktree-session.sh
zsh/: .zsh_zinit  .zsh_zplug  .zsh_zplug_old  .zshenv  .zshrc
zsh/.zsh_spaces/: README.md  loader.zsh
(+214 files in other folders)
